# PluginBase

./: CMakeLists.txt  README.md
include/: Base.hpp  Compressor.hpp  EffectBase.hpp  Filters.hpp  Oscillator.hpp
